2005-10-11  Ian Turner <ian@zmanda.com>

	* restore-src/amfetchdump.c: Remove unused variable debug.
        * restore-src/amidxtaped.c: Remove lock_logfile(), which is also 
	  in restore.c.
	* restore-src/Makefile.am: Include libamanda twice, to fix build 
	  on some machines.
          Thanks to Jean-Louis Martineau for these fixes.

2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* restore-src/Makefile (noinst_HEADERS): Add restore.h.
	* restore-src/restore.c (search_tapes): Add the fourth argument to
	  read_file_header.

2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/conffile.c: dpcur.s_split_diskbuffer must be initialize
	  to 0.
	* server-src/reporter.c (handle_partial): Set repdata to the result
	  of handle_success.
	* server-src/taper.c: Set the first-file.

2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/client_util.c, server-src/amcheck.c,
	  server-src/reporter.c: Add missing type for arguments.

2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/taper.c (tape_writer_side): detach_buffers on normal exit.

2005-10-10  Ian Turner <ian@zmanda.com>

	* server-src/amtape.h: Apply tape-spanning patch by John Stange
	  <building@cs.umd.edu> as ported to 2.5.0 by Ian Turner, with
	  contributions by Christopher Pascoe <c.pascoe@itee.uq.edu.au>.
	* configure.in: Ditto
	* amplot/Makefile.am: Ditto
	* changer-src/Makefile.am: Ditto
	* client-src/Makefile.am: Ditto
	* common-src/Makefile.am: Ditto
	* common-src/amanda.h: Ditto
	* common-src/amfeatures.c: Ditto
	* common-src/amfeatures.h: Ditto
	* common-src/fileheader.c: Ditto
	* common-src/fileheader.h: Ditto
	* common-src/match.c: Ditto
	* common-src/tapelist.c: Ditto
	* common-src/tapelist.h: Ditto
	* example/amanda.conf.in: Ditto
	* man/Makefile.am: Ditto
	* recover-src/amrecover.c: Ditto
	* recover-src/amrecover.h: Ditto
	* recover-src/display_commands.c: Ditto
	* recover-src/extract_list.c: Ditto